fix: add Lombok to models, fix service code quality and add order-service pom.xml
- Add @Data, @AllArgsConstructor, @NoArgsConstructor to ShoppingCart, UserProfile, SellerProfile
- Extract error message constants in OrderService, ShoppingCartService, SellerProfileService
- Replace Stream.collect(Collectors.toList()) with Stream.toList() for modern Java
- Fix duplicate error messages with constants (S1192)
- Create order-service pom.xml with Lombok and shared-lib dependency
- All services now have proper Lombok annotations for getters/setters